--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,19 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+
+nav .drop-down[aria-hidden="true"] {
+    @apply opacity-0 translate-y-1;
+}
+nav .drop-down[aria-hidden="false"] {
+    @apply opacity-100 translate-y-0;
+}
+
+nav .drop-down {
+    @apply transition ease-out duration-200; /* For entering */
+}
+  
+nav .drop-down[aria-hidden="true"] {
+    @apply opacity-0 translate-y-1 transition ease-in duration-150; /* For leaving */
+}
+    
