--- a/lib/synthetic_manager_web/components/layouts/app.html.heex
+++ b/lib/synthetic_manager_web/components/layouts/app.html.heex
@@ -9,17 +9,36 @@
       />
     </a>
   </:logo>
-  <:links :let={context}>
-    <.nav_links context={context} >
-      <.nav_link name="steve" context={context} >
-         <:dropdown>
-            <.nav_link name="bob" context={context} />   
-         </:dropdown>
-      </.nav_link>
-      <.nav_link name="bob" context={context} />
-      <.nav_link name="greg" context={context} />
-    </.nav_links>
-  </:links>
+  
+  <:link>
+    <.submenu handle="synthetic">
+      <:label>Synthetics</:label>
+      <:link>
+        
+        <div class="group relative rounded-lg p-6 text-sm leading-6 hover:bg-gray-50">
+              <div class="flex h-11 w-11 items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
+                <svg class="h-6 w-6 text-gray-600 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+                </svg>
+              </div>
+              <a href="#" class="mt-6 block font-semibold text-gray-900">
+                Analytics
+                <span class="absolute inset-0"></span>
+              </a>
+              <p class="mt-1 text-gray-600">Get a better understanding where your traffic is coming from</p>
+        </div>
+      </:link>
+    </.submenu>
+  </:link>
+  <:link>
+    <a href={~p(/synthetic-groups)} class="menu-link">Groups</a>
+  </:link>
+  <:link>
+    <a href={~p(/features)} class="menu-link">Features</a>
+  </:link>
+
+  <:action>Go</:action>
 </.header_bar>
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
