--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,52 +2,57 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-
-header nav.navbar .submenu  {
-    @apply inline-block relative;
+header nav {
+    @apply mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8;
 }
 
-
-header nav.navbar .submenu .dropdown  {
-    @apply absolute inset-x-0 top-10 z-10 bg-white pt-14 shadow-lg ring-1 ring-gray-900/5 w-80;
-}
-
-header nav.navbar .submenu .dropdown .inner {
-    @apply mx-auto grid max-w-7xl grid-cols-4 gap-x-4 px-6 py-10 lg:px-8 xl:gap-x-8 w-fit;
-}
-
-header nav.navbar .submenu button {
-    @apply flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900 w-fit;
-}
-
-/* This file is for your main application CSS */
-header .navbar a.menu-link {
+header nav a.menu-link {
     @apply text-sm font-semibold leading-6 text-gray-900;
 }
 
-header .mobile.navbar a.menu-link {
-    @apply text-sm font-semibold leading-6 text-red-900;
+header nav .dropdown-menu {
+    @apply relative;
 }
 
-header .mobile.navbar[aria-hidden="true"] {
+header nav .dropdown .col-2-section {
+    @apply grid grid-cols-2 divide-x divide-gray-900/5 bg-gray-50;
+}
+header nav .dropdown .row-section {
+    @apply p-4;
+}
+
+header nav .dropdown {
+    @apply absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5;
+}
+
+header nav .dropdown-menu[aria-expanded="false"] .open-dropdown {
+    @apply flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900;
+}
+header nav .dropdown-menu[aria-expanded="true"] .open-dropdown {
     @apply hidden;
 }
-header .mobile.navbar[aria-hidden="false"] {
-    @apply visible;
+
+header nav .dropdown-menu[aria-expanded="false"] .close-dropdown {
+    @apply hidden;
+}
+header nav .dropdown-menu[aria-expanded="true"] .close-dropdown {
+    @apply flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900;
+    
 }
 
-nav .drop-down[aria-hidden="true"] {
-    @apply opacity-0 translate-y-1;
+header nav .dropdown-menu[aria-expanded="false"] .dropdown {
+    @apply opacity-0 translate-y-1;            
 }
-nav .drop-down[aria-hidden="false"] {
+
+header nav .dropdown-menu[aria-expanded="true"] .dropdown {
     @apply opacity-100 translate-y-0;
 }
 
-nav .drop-down {
+header nav .dropdown-menu[aria-expanded="true"] .dropdown  {
     @apply transition ease-out duration-200; /* For entering */
 }
   
-nav .drop-down[aria-hidden="true"] {
+header nav .dropdown-menu[aria-expanded="false"] .dropdown {
     @apply opacity-0 translate-y-1 transition ease-in duration-150; /* For leaving */
 }
-    
+  
