--- a/lib/synthetic_manager_web/components/layouts/app.html.heex
+++ b/lib/synthetic_manager_web/components/layouts/app.html.heex
@@ -1,44 +1,119 @@
 <.header_bar>
-  <:logo>
-    <a href="#" class="-m-1.5 p-1.5">
-      <span class="sr-only">Your Company</span>
-      <img
-        class="h-8 w-auto"
-        src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-        alt=""
-      />
-    </a>
-  </:logo>
-  
-  <:link>
-    <.submenu handle="synthetic">
-      <:label>Synthetics</:label>
-      <:link>
-        
-        <div class="group relative rounded-lg p-6 text-sm leading-6 hover:bg-gray-50">
-              <div class="flex h-11 w-11 items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
-                <svg class="h-6 w-6 text-gray-600 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
-                </svg>
-              </div>
-              <a href="#" class="mt-6 block font-semibold text-gray-900">
-                Analytics
-                <span class="absolute inset-0"></span>
-              </a>
-              <p class="mt-1 text-gray-600">Get a better understanding where your traffic is coming from</p>
-        </div>
-      </:link>
-    </.submenu>
-  </:link>
-  <:link>
-    <a href={~p(/synthetic-groups)} class="menu-link">Groups</a>
-  </:link>
-  <:link>
-    <a href={~p(/features)} class="menu-link">Features</a>
-  </:link>
+<:link>
 
-  <:action>Go</:action>
+<.dropdown_menu label="Product">
+<:section type="vertical">
+<div class="row-section">
+
+<.icon_link>
+<:name>Analytics</:name>
+<:tagline>Get a better understanding of your traffic</:tagline>
+<:icon>
+<svg class="h-6 w-6 text-gray-600 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+<path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
+<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+</svg>
+</:icon>                  
+</.icon_link>            
+
+<.icon_link>
+<:name>Stuff</:name>
+<:tagline>Get a better understanding of your traffic</:tagline>
+<:icon>
+<svg class="h-6 w-6 text-gray-600 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+<path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
+<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+</svg>
+</:icon>                  
+</.icon_link>            
+
+
+</div>              
+</:section>
+<:section>
+<div class="col-2-section">
+<.icon_link>
+<:name>Stuff</:name>
+<:icon>
+<svg class="h-6 w-6 text-gray-600 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+<path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
+<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+</svg>
+</:icon>                  
+</.icon_link>  
+<a href="#" class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100">
+<svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+<path fill-rule="evenodd" d="M2 3.5A1.5 1.5 0 013.5 2h1.148a1.5 1.5 0 011.465 1.175l.716 3.223a1.5 1.5 0 01-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 006.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 011.767-1.052l3.223.716A1.5 1.5 0 0118 15.352V16.5a1.5 1.5 0 01-1.5 1.5H15c-1.149 0-2.263-.15-3.326-.43A13.022 13.022 0 012.43 8.326 13.019 13.019 0 012 5V3.5z" clip-rule="evenodd" />
+</svg>
+Contact sales
+</a>
+</div>
+</:section>
+</.dropdown_menu>
+
+</:link>          
+<:link>          
+<a href="#" class="menu-link">Features</a>
+</:link>    
+
+<:link>                    
+<a href="#" class="menu-link">Marketplace</a>
+</:link>       
+<:link>
+<.dropdown_menu label="Product2">
+<:section type="vertical">
+<div class="row-section">
+
+<.icon_link>
+<:name>Analytics</:name>
+<:tagline>Get a better understanding of your traffic</:tagline>
+<:icon>
+<svg class="h-6 w-6 text-gray-600 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+<path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
+<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+</svg>
+</:icon>                  
+</.icon_link>            
+
+<.icon_link>
+<:name>Stuff</:name>
+<:tagline>Get a better understanding of your traffic</:tagline>
+<:icon>
+<svg class="h-6 w-6 text-gray-600 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+<path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
+<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+</svg>
+</:icon>                  
+</.icon_link>            
+
+
+</div>              
+</:section>
+<:section>
+<div class="col-2-section">
+<.icon_link>
+<:name>Stuff</:name>
+<:icon>
+<svg class="h-6 w-6 text-gray-600 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+<path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
+<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+</svg>
+</:icon>                  
+</.icon_link>  
+<a href="#" class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100">
+<svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+<path fill-rule="evenodd" d="M2 3.5A1.5 1.5 0 013.5 2h1.148a1.5 1.5 0 011.465 1.175l.716 3.223a1.5 1.5 0 01-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 006.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 011.767-1.052l3.223.716A1.5 1.5 0 0118 15.352V16.5a1.5 1.5 0 01-1.5 1.5H15c-1.149 0-2.263-.15-3.326-.43A13.022 13.022 0 012.43 8.326 13.019 13.019 0 012 5V3.5z" clip-rule="evenodd" />
+</svg>
+Contact sales
+</a>
+</div>
+</:section>
+</.dropdown_menu>  
+</:link> 
+
+<:link>          
+<a href="#" class="menu-link">Company</a>
+</:link>
 </.header_bar>
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
