--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,6 +14,8 @@ header nav .dropdown-menu {
     @apply relative;
 }
 
+
+
 header nav .dropdown .col-2-section {
     @apply grid grid-cols-2 divide-x divide-gray-900/5 bg-gray-50;
 }
@@ -21,23 +23,42 @@ header nav .dropdown .row-section {
     @apply p-4;
 }
 
-header nav .dropdown {
-    @apply absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5;
+header nav .row-section .icon-link {
+    @apply relative flex items-center gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50;
 }
 
-header nav .dropdown-menu[aria-expanded="false"] .open-dropdown {
+header nav .row-section .icon-link .icon {
+    @apply flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white;
+}
+
+header nav .col-2-section .icon-link {
+    @apply flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100;
+}
+
+
+header nav .col-2-section .icon-link .icon {
+    
+}
+
+
+
+header .dropdown-menu[aria-expanded="false"] .open-dropdown {
     @apply flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900;
 }
-header nav .dropdown-menu[aria-expanded="true"] .open-dropdown {
+header .dropdown-menu[aria-expanded="true"] .open-dropdown {
     @apply hidden;
 }
 
-header nav .dropdown-menu[aria-expanded="false"] .close-dropdown {
+header .dropdown-menu[aria-expanded="false"] .close-dropdown {
     @apply hidden;
 }
-header nav .dropdown-menu[aria-expanded="true"] .close-dropdown {
+header .dropdown-menu[aria-expanded="true"] .close-dropdown {
     @apply flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900;
     
+}
+
+header nav .dropdown {
+    @apply absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5;
 }
 
 header nav .dropdown-menu[aria-expanded="false"] .dropdown {
@@ -56,3 +77,35 @@ header nav .dropdown-menu[aria-expanded="false"] .dropdown {
     @apply opacity-0 translate-y-1 transition ease-in duration-150; /* For leaving */
 }
   
+
+header div.mobile {
+    
+}
+
+header div.mobile .icon-link .icon {
+    @apply pr-2;
+}
+header div.mobile  .row-section .icon-link .tagline {
+    @apply hidden;
+}
+
+header div.mobile .dropdown .icon-link {
+    @apply flex flex-row items-start rounded-lg p-2 text-sm leading-6 hover:bg-gray-50;
+
+}
+
+header div.mobile .dropdown-menu[aria-expanded="false"] .dropdown {
+    @apply hidden;            
+}
+
+header div.mobile .dropdown-menu[aria-expanded="true"] .dropdown {
+    
+}
+
+header div.mobile .dropdown-menu[aria-expanded="true"] .dropdown  {
+    
+}
+  
+header div.mobile .dropdown-menu[aria-expanded="false"] .dropdown {
+    
+}
