fuxing with css - more or less operable link/header plugin working

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -78,8 +78,8 @@ header nav .dropdown-menu[aria-expanded="false"] .dropdown {
 }
   
 
-header div.mobile {
-    
+header div.mobile[aria-hidden="true"] {
+    @apply hidden;
 }
 
 header div.mobile .icon-link .icon {
