additional form setup

--- a/lib/synthetic_manager_web/live/synthetic_live/index.html.heex
+++ b/lib/synthetic_manager_web/live/synthetic_live/index.html.heex
@@ -42,7 +42,7 @@ on_cancel={JS.patch(~p"/synthetics")}
     title={@page_title}
     action={@live_action}
     synthetic={@synthetic}
-    feature_options={@feature_options}
+    features={@features}
     patch={~p"/synthetics"}
 />
 </.modal>
