--- a/lib/synthetic_manager_web/live/synthetic_live/show.html.heex
+++ b/lib/synthetic_manager_web/live/synthetic_live/show.html.heex
@@ -26,7 +26,7 @@
     id={@synthetic.id}
     title={@page_title}
     action={@live_action}
-    feature_options={@feature_options}
+    features={@features}
     synthetic={@synthetic}
     patch={~p"/synthetics/#{@synthetic}"}
   />
