--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "./tail-wind.css";
 
 header nav {
     @apply mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8;
