--- a/lib/synthetic_manager_web/live/synthetic_live/upload.html.heex
+++ b/lib/synthetic_manager_web/live/synthetic_live/upload.html.heex
@@ -1,5 +1,4 @@
-
-
+<main id="body-root-layout" phx-hook="JS_FORWARD">
 <h1>Upload Yaml Changesets</h1>
 <form phx-submit="synthetics:upload">
     <textarea name="upload"  rows="20" class="w-full h-full" multiple="true" >
@@ -8,6 +7,39 @@
     <button type="submit" class="bg-black rounded text-sm font-semibold leading-6 text-white active:text-white/80">Next.</button>
 </form>
 
-<pre :if={assigns[:json]}>
-    <%= inspect assigns[:json], pretty: true %>
-</pre>
+<.table
+id="synthetics"
+rows={@synthetics}
+row_click={fn {id, _synthetic} -> "edit-synthetic-#{id}" end}
+>
+    <:col :let={{id, synthetic}} label="Name">
+        <%= id %> - <%= synthetic.id %>
+    </:col>
+    <:col :let={{_id, synthetic}} label="Name">
+        <%= synthetic.name %>
+    </:col>
+    <:col :let={{_id, synthetic}} label="Name">
+        <%= synthetic.name %>
+    </:col>
+    <:col :let={{_id, synthetic}} label="Description">
+    <%= synthetic.description %>
+    </:col>
+
+</.table>
+<button phx-click="save-all" type="button" class="bg-black rounded text-sm font-semibold leading-6 text-white active:text-white/80">Save All</button>
+
+<.modal
+    :if={@live_action in [:new, :modify, :edit]}
+    id="synthetic-upload-modal"
+>
+
+<.live_component
+    module={SyntheticManagerWeb.SyntheticLive.FormComponent}
+    id={:new}
+    title={@page_title}
+    action={@live_action}
+    synthetic={@synthetic}
+    patch={nil}
+/>
+</.modal>
+</main>
