--- a/lib/synthetic_manager_web/components/layouts/app.html.heex
+++ b/lib/synthetic_manager_web/components/layouts/app.html.heex
@@ -54,6 +54,9 @@
     </.dropdown_menu>
 
     <a href={~p(/features)} class="menu-link">Features</a>
+    <a href={~p(/users)} class="menu-link">Users</a>
+    <a href={~p(/organizations)} class="menu-link">Orgs</a>
+    <a href={~p(/groups)} class="menu-link">Groups</a>
 
   </:links>
 </.header_bar>
