--- a/lib/synthetic_manager_web/live/synthetic_live/index.html.heex
+++ b/lib/synthetic_manager_web/live/synthetic_live/index.html.heex
@@ -12,8 +12,11 @@ id="synthetics"
 rows={@streams.synthetics}
 row_click={fn {_id, synthetic} -> JS.navigate(~p"/synthetics/#{synthetic}") end}
 >
+<:col :let={{_id, synthetic}} label="Created"><%= synthetic.inserted_at %></:col>
+<:col :let={{_id, synthetic}} label="Modified"><%= synthetic.updated_at %></:col>
 <:col :let={{_id, synthetic}} label="Name"><%= synthetic.name %></:col>
 <:col :let={{_id, synthetic}} label="Description"><%= synthetic.description %></:col>
+<:col :let={{_id, synthetic}} label="Group"><%= synthetic.group && synthetic.group.name %></:col>
 <:action :let={{_id, synthetic}}>
     <div class="sr-only">
         <.link navigate={~p"/synthetics/#{synthetic}"}>Show</.link>
